# itis

stooge_sort/: CMakeLists.txt  main.cpp  Отчет.docx  Отчет.xlsx
stooge_sort/DataGenerator/: dataGenerator.cpp  dataGenerator.h
stooge_sort/StoogeSorts/: stoogeSortArray.cpp  stoogeSortLinkedList.cpp  stoogeSorts.h
